// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MathEquation editor Node builds the expected component 1`] = `
<div
  className="component obojobo-draft--chunks--math-equation pad align-center"
  dummy="dummyData"
>
  <div
    className="katex-container katex-error"
  >
    <p>
      Cannot read property 'length' of undefined
    </p>
  </div>
  <div
    className="equation-editor"
  >
    <div>
      <p>
        Latex Equation
      </p>
      <input
        frameBorder="0"
        name="Latex Equation"
        onChange={[Function]}
        onClick={[Function]}
        value={undefined}
      />
    </div>
    <div>
      <p>
        Equation Label
      </p>
      <input
        frameBorder="0"
        name="Equation Label"
        onChange={[Function]}
        onClick={[Function]}
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`MathEquation editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "width": "large",
    },
  },
  "isVoid": true,
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`MathEquation editor oboToSlate converts an OboNode to a Slate node with a caption 1`] = `
Object {
  "data": Object {
    "content": Object {},
  },
  "isVoid": true,
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`MathEquation editor plugins.renderNode renders a button when passed 1`] = `
<Node
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.MathEquation",
    }
  }
/>
`;

exports[`MathEquation editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
